--- a/css/style.css
+++ b/css/style.css
@@ -299,6 +299,63 @@ padding: 20px;
 margin: 10px;
 }  
 
+.sql {
+    background-color: var(--bg-color);
+    padding: 32px;
+    margin-top: 2rem;
+}
+
+.projects h2 {
+    text-align: center;
+}
+
+.project-pic {
+    width: 65%;
+    height: 60%;
+}
+
+.sql-container {
+    display: flex;
+    grid-template-columns: repeat(3, fr); /* Three columns with equal width */
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.sql-title {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.sql-container p {
+    padding: 0.4rem;
+}
+
+.sql-title {
+    margin-bottom: var(--bottom-margin);
+}
+
+.sql-details {
+    margin-bottom: var(--bottom-margin);
+}
+
+.sql-card {
+    text-align: center;
+    background-color: #fff;
+    border-radius: 11px;
+    box-shadow: 0 3px 10px var(--secondary-color);
+    padding: 20px;
+    margin: 10px;
+    display: flex; 
+    flex-direction: column;
+    align-items: center; 
+}
+
+.sql-card i {
+    font-size: 5rem; 
+    padding-bottom: 1rem;
+}
+
 .contact {
     margin-top: 2rem;
     padding-bottom: 2rem;
@@ -321,7 +378,7 @@ margin: 10px;
 .contact-form-container label {
     line-height: 2.7rem;
     font-weight: var(--bold-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .contact-for-container textarea {
@@ -335,14 +392,14 @@ margin: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
     border: none;
-    border: 2px outset var(--secondary-color);
+    border: 2px outset var(--primary-color);
     font-size: 0.875rem;
     outline: none;
 }
 
 .input-field::placeholder {
     padding: 0.5rem;
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 .submit-btn {
@@ -350,7 +407,7 @@ margin: 10px;
     padding: 10px;
     margin: 10px 0;
     background-color: #fff;
-    border: 2px solid var(--secondary-color);
+    border: 2px solid var(--primary-color);
     border-radius: 5px;
     font-size: 1rem;
     font-weight: var(--bold-font);
@@ -358,8 +415,8 @@ margin: 10px;
 }
 
 .submit-btn:hover {
-    background-color: var(--secondary-color);
-    border: 2px solid var(--secondary-shadow);
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
     cursor: pointer;
 }
 
